new background for login-2

--- a/css/login-2.css
+++ b/css/login-2.css
@@ -12,7 +12,7 @@
 }
 
 body {
-	background: #333 url('../imgs/schoolgirl.jpg') no-repeat center top;
+	background: url('../imgs/debut_dark.png') repeat 0 0;
 }
 
 #login-container {
